--- a/src/components/SharedLayout/SharedLayout.module.css
+++ b/src/components/SharedLayout/SharedLayout.module.css
@@ -15,10 +15,18 @@
 .Header > nav {
 	display: flex;
 }
-.Link {
+.Link   {
 	padding: 8px 16px;
 	border-radius: 4px;
 	text-decoration: none;
 	color: black;
 	font-weight: 500;
+	
 }
+.Link:global(.active) {
+	font-weight: 800;
+	color: orange;
+	text-decoration: underline;
+	
+}
+
